syntax = "proto3";

option csharp_namespace = "PRN231_ProjectMain";

service Authenticater {
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest{
	string email = 1;
	string password = 2;
	string fullname = 3;
	string phonenum = 4;
	string address = 5;
	string username = 6;
}

message RegisterResponse{
	bool isSuccess = 1;
	string message = 2;
}

message LoginRequest{
	string email = 1;
	string password = 2;
}

message LoginResponse {
	bool isSuccess = 1;
	string message = 2;
	string token = 3;
}